--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Fire Flyz Rarity Tool",
-    "description": "Fire Flyz Rarity Tool.",
-    "repository": "https://github.com/fukuball/rarity-analyser",
-    "logo": "https://fire-flyz.herokuapp.com/images/logo.png",
+    "name": "",
+    "description": "",
+    "repository": "",
+    "logo": "",
     "keywords": ["NFT", "ERC721", "rarity", "xtypunk", "xtyworld"]
   }
